objects/Oppty_Staging_Table__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Ids__c</fullName>
        <label>Opportunity Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_diff__c</fullName>
        <formula>((NOW() - CreatedDate)*1440)/ 60</formula>
        <label>Time diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Oppty Staging Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Time_diff__c</columns>
        <columns>Opportunity_Ids__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Oppty Staging Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oppty Staging Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>